Dpkg/Shlibs/SymbolFile.pm: Replace DEPRECATED by MISSING
People understand better that symbols disappeared with the marker MISSING
than with the marker DEPRECATED (which look like it was done on purpose).
Continue to accept DEPRECATED in the input however.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     debian/*/DEBIAN/symbols for a given soname. Closes: #458860
   * Add a -S<pkgbuilddir> option to dpkg-shlibdeps to indicate a package build
     tree to scan first when trying to find a needed library.
+  * Change dpkg-gensymbols to mark symbols that disappeared with #MISSING
+    instead of #DEPRECATED, it's clearer for people.
 
   [ Guillem Jover ]
   * Move compression related variables to a new Dpkg::Compression module.
