German translation update. Closes: #459223

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * French (Christian Perrier).
   * Simplified Chinese (Deng Xiyue). Closes: #459018
   * Swedish (Peter Karlsson).
+  * German (Sven Joachim). Closes: #459223
 
   [ Updated scripts translations ]
   * French (Christian Perrier).
