--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-05  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 928t.
+
 2008-01-04  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 928t.
