--- a/po/de.po
+++ b/po/de.po
@@ -4,16 +4,16 @@
 # Erich Schubert <debian@vitavonni.de>, March 2001.
 # Michael Piefel <piefel@debian.org>, 2001, 2002, 2003, 2004, 2005.
 # Florian Ernst <florian@uni-hd.de>, 2004.
-# Sven Joachim <svenjoac@gmx.de>, 2006, 2007.
+# Sven Joachim <svenjoac@gmx.de>, 2006, 2007, 2008.
 #
 # $Id$
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.14.6\n"
+"Project-Id-Version: Debian dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-29 05:57+0100\n"
-"PO-Revision-Date: 2007-11-01 13:32+0100\n"
+"PO-Revision-Date: 2008-01-04 19:11+0100\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3861,9 +3861,9 @@ msgid "failed to exec rm -rf"
 msgstr "Konnte »rm -rf« nicht ausführen"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%lu bytes)"
-msgstr "realloc fehlgeschlagen (%ld Byte)"
+msgstr "realloc fehlgeschlagen (%lu Byte)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
@@ -5329,13 +5329,13 @@ msgid "Current `best' version is %s."
 msgstr "Gegenwärtig »beste« Version ist %s."
 
 #: scripts/update-alternatives.pl:232
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "warning: %s is supposed to be a symlink to %s, \n"
 "or nonexistent; however, readlink failed: %s"
 msgstr ""
 "Warnung: %s sollte ein symbolischer Link auf %s sein\n"
-" (oder nicht existent); jedoch schlug readlink fehl: %s"
+"oder nicht existieren; jedoch schlug readlink fehl: %s"
 
 #: scripts/update-alternatives.pl:244
 #, perl-format
@@ -5348,7 +5348,7 @@ msgid "Updating %s (%s) to point to %s."
 msgstr "Aktualisiere %s (%s), auf %s zu verweisen."
 
 #: scripts/update-alternatives.pl:256
-#, fuzzy, perl-format
+#, perl-format
 msgid "Using '%s' to provide '%s'."
 msgstr "Verwende »%s«, um »%s« bereitzustellen."
 
@@ -5588,13 +5588,3 @@ msgstr "Kann %s nicht als %s installieren: %s"
 #, perl-format
 msgid "Serious problem: %s"
 msgstr "Schwerwiegendes Problem: %s"
-
-#~ msgid "unable to ensure %s nonexistent: %s"
-#~ msgstr "Kann nicht sicherstellen, dass %s nicht existiert: %s"
-
-#~ msgid ""
-#~ "warning: %s is supposed to be a slave symlink to\n"
-#~ " %s, or nonexistent; however, readlink failed: %s"
-#~ msgstr ""
-#~ "Warnung: %s sollte ein symbolischer Slave-Link auf\n"
-#~ " %s sein oder nicht existieren; jedoch schlug readlink fehl: %s"
