--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     tree to scan first when trying to find a needed library.
   * Change dpkg-gensymbols to mark symbols that disappeared with #MISSING
     instead of #DEPRECATED, it's clearer for people.
+  * Fix Dpkg::Shlibs::Objdump to properly take into account R_*_COPY
+    relocations. Closes: #454036
 
   [ Guillem Jover ]
   * Move compression related variables to a new Dpkg::Compression module.
