Update deb-control(5) to explain better ordering of postinst/prerm
* man/deb-control.5: Explain better the ordering of call of
postinst/prerm during installations and removal between a package
and its dependencies.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     instead of #DEPRECATED, it's clearer for people.
   * Fix Dpkg::Shlibs::Objdump to properly take into account R_*_COPY
     relocations. Closes: #454036
+  * Explain better the order in which postinst/prerm scripts are called
+    between a package and its dependencies. Thanks to Nicolas François and
+    Helge Kreutzmann for their suggestions. Closes: #379641
 
   [ Guillem Jover ]
   * Move compression related variables to a new Dpkg::Compression module.
