--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-06  Raphael Hertzog  <hertzog@debian.org>
+
+	* deb-control.5: Explain better the ordering of call of
+	postinst/prerm during installations and removal between a package
+	and its dependencies.
+
 2008-01-03  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-buildpackage.1: Document new -j behaviour.
