--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Explain better the order in which postinst/prerm scripts are called
     between a package and its dependencies. Thanks to Nicolas François and
     Helge Kreutzmann for their suggestions. Closes: #379641
+  * Fix Dpkg::BuildOptions so that dpkg-buildpackage doesn't double all
+    options in DEB_BUILD_OPTIONS when called with the -j parameter.
+    Closes: #453656
 
   [ Guillem Jover ]
   * Move compression related variables to a new Dpkg::Compression module.
