--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.15.
+
+2008-01-07  Guillem Jover  <guillem@debian.org>
+
 	* src/archives.c (archivefiles): Use arglist instead of narglist.
 
 2008-01-07  Guillem Jover  <guillem@debian.org>
