--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.15) UNRELEASED; urgency=low
+dpkg (1.14.15) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Make sure {dpkg-dev,dselect}.preinst are included in the source tarball.
@@ -51,12 +51,12 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     code to never be executed.
 
   [ Updated dpkg translations ]
-  * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
-  * Vietnamese (Clytie Siddall). Closes: #459016
   * French (Christian Perrier).
+  * German (Sven Joachim). Closes: #459223
+  * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
   * Simplified Chinese (Deng Xiyue). Closes: #459018
   * Swedish (Peter Karlsson).
-  * German (Sven Joachim). Closes: #459223
+  * Vietnamese (Clytie Siddall). Closes: #459016
 
   [ Updated scripts translations ]
   * French (Christian Perrier).
@@ -65,7 +65,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
 
- -- Raphael Hertzog <hertzog@debian.org>  Thu, 27 Dec 2007 12:21:57 +0100
+ -- Guillem Jover <guillem@debian.org>  Mon, 07 Jan 2008 12:12:16 +0200
 
 dpkg (1.14.14) unstable; urgency=low
 
