--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.16~.
+
+2008-01-07  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.15.
 
 2008-01-07  Guillem Jover  <guillem@debian.org>
