--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.16) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 07 Jan 2008 12:39:36 +0200
+
 dpkg (1.14.15) unstable; urgency=low
 
   [ Raphael Hertzog ]
