dpkg-checkbuilddeps: Add build-essential as an implicit Build-Depends
Closes: #402901

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-checkbuilddeps.pl: Add build-essential as an implicit
+	Build-Depends.
+
+2008-01-07  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Bump version to 1.14.16~.
 
 2008-01-07  Guillem Jover  <guillem@debian.org>
