Basque translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Add build-essential as an implicit Build-Depends in dpkg-checkbuilddeps.
     Closes: #402901
 
+  [ Updated dpkg translations ]
+  * Basque (Piarres Beobide). Closes: #459565
+
  -- Guillem Jover <guillem@debian.org>  Mon, 07 Jan 2008 12:39:36 +0200
 
 dpkg (1.14.15) unstable; urgency=low
