--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-07  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 927t1f.
+
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
