Updated French translation in the hope that this crazyness will stop some day...just look at the diff

--- a/po/fr.po
+++ b/po/fr.po
@@ -4036,9 +4036,9 @@ msgid "failed to exec rm -rf"
 msgstr "impossible d'exécuter rm -rf"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%zu bytes)"
-msgstr "échec de « realloc » (%lu octets)"
+msgstr "échec de « realloc » (%zu octets)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
