--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #459565
+  * French (Christian Perrier).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 07 Jan 2008 12:39:36 +0200
 
