--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-07  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 928f.
+
 2008-01-07  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: Updated to 927t1f.
