Unfuzzy formerly complete translations. I like this game...

--- a/po/de.po
+++ b/po/de.po
@@ -3861,9 +3861,9 @@ msgid "failed to exec rm -rf"
 msgstr "Konnte »rm -rf« nicht ausführen"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%zu bytes)"
-msgstr "realloc fehlgeschlagen (%lu Byte)"
+msgstr "realloc fehlgeschlagen (%zu Byte)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
