--- a/po/eu.po
+++ b/po/eu.po
@@ -3858,10 +3858,8 @@ msgid "failed to exec rm -rf"
 msgstr "huts egin du rm -rf exekutatzean"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
-#| msgid "realloc failed (%lu bytes)"
 msgid "realloc failed (%zu bytes)"
-msgstr "realloc-ek huts egin du (%lu byte)"
+msgstr "realloc-ek huts egin du (%zu byte)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
