--- a/po/nb.po
+++ b/po/nb.po
@@ -3798,9 +3798,9 @@ msgid "failed to exec rm -rf"
 msgstr "klarte ikke kjøre «rm -rf»"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%zu bytes)"
-msgstr "nytildeling mislyktes (%lu byte)"
+msgstr "nytildeling mislyktes (%zu byte)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
