--- a/po/vi.po
+++ b/po/vi.po
@@ -3955,9 +3955,9 @@ msgid "failed to exec rm -rf"
 msgstr "lỗi thực hiện « rm -rf »"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%zu bytes)"
-msgstr "realloc (cấp phát lại) bị lỗi (%lu byte)"
+msgstr "realloc (cấp phát lại) bị lỗi (%zu byte)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
