--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3721,9 +3721,9 @@ msgid "failed to exec rm -rf"
 msgstr "exec rm -rf 失败"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%zu bytes)"
-msgstr "realloc 失败(%lu 字节)"
+msgstr "realloc 失败(%zu 字节)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
