Do not warn about unrecognized Homepage field in binary package stanzas

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add build-essential as an implicit Build-Depends in dpkg-checkbuilddeps.
     Closes: #402901
+  * Do not warn about unrecognized Homepage field in binary package stanzas
+    in dpkg-genchanges and dpkg-source.
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #459565
