--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,13 @@ dpkg (1.14.16) UNRELEASED; urgency=low
      - Various options to better control how many entries
        should be displayed. Closes: #226932
 
+  [ Raphael Hertzog ]
+  * Replaced all the remaining code in controllib.pl by new modules. All
+    scripts have been adjusted to use the new modules and controllib.pl has
+    been removed.
+  * The code to parse debian/control is available in a perl module
+    Dpkg::Control. Closes: #26554
+
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #459565
   * French (Christian Perrier).
