Fix typo in French manpages translations

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -1748,7 +1748,7 @@ msgstr ""
 #: ../../man/deb-substvars.5:52
 #, no-wrap
 msgid "B<source:Version>"
-msgstr "B<Source:Version>"
+msgstr "B<source:Version>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:55
