--- a/debian/changelog
+++ b/debian/changelog
@@ -24,9 +24,14 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * The code to parse debian/control is available in a perl module
     Dpkg::Control. Closes: #26554
 
+  [ Updated manpages translations ]
+  * Fix typo in French. Closes: #460021
+
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #459565
   * French (Christian Perrier).
+  * German, Basque, Norwegian Bokmål, Swedish, Vietnamese, Simplified Chinese
+    unfuzzied and completed *again*
 
  -- Guillem Jover <guillem@debian.org>  Mon, 07 Jan 2008 12:39:36 +0200
 
