--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-10  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Fix typo
+
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
