Make sure dpkg-dev 1.14.13 and 1.14.14 are upgraded together with dpkg
* debian/control: Add a "Breaks: dpkg-dev (= 1.14.13),
dpkg-dev (= 1.14.14)" on dpkg to force upgrade of those dpkg-dev
versions that would break with the move of the compression related
variables from Dpkg.pm into Dpkg/Compression.pm.

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
     been removed.
   * The code to parse debian/control is available in a perl module
     Dpkg::Control. Closes: #26554
+  * Temporarily add a Breaks: dpkg-dev (= 1.14.13), dpkg-dev (= 1.14.14) on
+    dpkg for the convenience of sid users. Closes: #459815
 
   [ Updated manpages translations ]
   * Fix typo in French. Closes: #460021
