dpkg-source(1): Explain better the first parameter of the -b option.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
     Dpkg::Control. Closes: #26554
   * Temporarily add a Breaks: dpkg-dev (= 1.14.13), dpkg-dev (= 1.14.14) on
     dpkg for the convenience of sid users. Closes: #459815
+  * Update dpkg-source(1) to explain better what the directory after -b is.
+    Closes: #323606
 
   [ Updated manpages translations ]
   * Fix typo in French. Closes: #460021
