dpkg-gencontrol: Also force version in ${binary:Version} if -v<version> is used.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-11  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Also force version in ${binary:Version}
+	if dpkg-gencontrol -v<version> is used. That way we're consistent
+	with the definition of that variable in deb-substvars(5).
+
 2008-01-10  Raphael Hertzog  <hertzog@debian.org>
 
 	* debian/control: Add a "Breaks: dpkg-dev (= 1.14.13),
