--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,9 @@ dpkg (1.14.16) UNRELEASED; urgency=low
     dpkg for the convenience of sid users. Closes: #459815
   * Update dpkg-source(1) to explain better what the directory after -b is.
     Closes: #323606
+  * Also force version in ${binary:Version} if dpkg-gencontrol -v<version>
+    is used. That way we're consistent with the definition of that variable
+    in deb-substvars(5). Closes: #433477
 
   [ Updated manpages translations ]
   * Fix typo in French. Closes: #460021
