--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-01-12  Raphael hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Fields.pm: Define variables containing
+	authoritative list of fields for debian/control (one for source
+	stanza, one for package stanza).
+	* scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
+	scripts/dpkg-source.pl: Use the new variables to properly ignore
+	valid fields. Some related cleanup.
+
 2008-01-11  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-gencontrol.pl: Also force version in ${binary:Version}
