Add a missing bug closure in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Add build-essential as an implicit Build-Depends in dpkg-checkbuilddeps.
     Closes: #402901
   * Do not warn about unrecognized Homepage field in binary package stanzas
-    in dpkg-genchanges and dpkg-source.
+    in dpkg-genchanges and dpkg-source. Closes: #460309
 
   [ Frank Lichtenheld ]
   * Make the -L option of dpkg-parsechangelog actually work (it's
