Updated Galician translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-12  Jacobo Tarrio  <jtarrio@debian.org>
+
+	* gl.po: Updated to 928f.
+
 2008-01-07  Christian Perrier  <bubulle@debian.org>
 
 	* de.po, eu.po, fr.po, nb.po, sv.po, vi.po, zh_CN.po:
