--- a/debian/changelog
+++ b/debian/changelog
@@ -38,10 +38,10 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #459565
   * French (Christian Perrier).
-  * German, Basque, Norwegian Bokmål, Swedish, Vietnamese, Simplified Chinese
-    unfuzzied and completed *again*
+  * German, Basque, Norwegian Bokmål, Swedish, Vietnamese, Simplified Chinese,
+    Galician unfuzzied and completed *again*
 
- -- Guillem Jover <guillem@debian.org>  Mon, 07 Jan 2008 12:39:36 +0200
+ -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 12 Jan 2008 12:27:22 +0000
 
 dpkg (1.14.15) unstable; urgency=low
 
