Complete German translation of manpages (except dselect) again

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,12 +34,13 @@ dpkg (1.14.16) UNRELEASED; urgency=low
 
   [ Updated manpages translations ]
   * Fix typo in French. Closes: #460021
+  * German (Helge Kreutzmann).
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #459565
   * French (Christian Perrier).
   * German, Basque, Norwegian Bokmål, Swedish, Vietnamese, Simplified Chinese,
-    Galician unfuzzied and completed *again*
+    Galician unfuzzied and completed *again*.
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 12 Jan 2008 12:27:22 +0000
 
