--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-12  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1352t0f34u.
+
 2008-01-10  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-source.1: Explain better the first parameter of the -b option.
