dpkg-shlibdeps(1): Fix a typo

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,4 +1,9 @@
-2008-02-12  Helge Kreutzmann  <debian@helgefjell.de>
+2008-01-12  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-shlibdeps.1: Fix a typo reported by Helge Kreutzmann.
+	* po/*.po: Likewise to avoid fuzzy strings.
+
+2008-01-12  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1352t0f34u.
 
