--- a/man/po/ja.po
+++ b/man/po/ja.po
@@ -7314,7 +7314,7 @@ msgstr ""
 msgid ""
 "Furthermore, in some cases, this will lead to a non-versioned dependency on "
 "the library that could have been avoided if the binary was only linked "
-"against the library that it really uses. The exception to this rule is when "
+"against libraries that it really uses. The exception to this rule is when "
 "several binaries are linked against the same set of libraries but each "
 "binary only uses a subset of those. You will have warnings on individual "
 "binaries, but the set of libraries needed at the package level is the same "
