dpkg-parsechangelog(1): Document the new parser options

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-13  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-parsechangelog.1: Document the new
+	command line options.
+
 2008-01-12  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-shlibdeps.1: Fix a typo reported by Helge Kreutzmann.
