600_Dpkg_Changelog.t: Add more tests
* scripts/t/600_Dpkg_Changelog.t: Add a new changelog
'fields' that tests the handling of the different fields
in the dpkg format.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-13  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/t/600_Dpkg_Changelog.t: Add a new changelog
+	'fields' that tests the handling of the different fields
+	in the dpkg format.
+
 	* scripts/Dpkg/Changelog.pm: Replace all field hashes
 	with Dpkg::Changelog::Entry objects.
 	(Dpkg::Changelog::Entry): Base on Dpkg::Fields::Object.
