Russian translation update. Closes: #460708

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #459565
   * French (Christian Perrier).
   * German, Basque, Norwegian Bokmål, Swedish, Vietnamese, Simplified Chinese,
-    Galician unfuzzied and completed *again*.
+    Galician unfuzzied.
+  * Russian (Yuri Kozlov). Closes: #460708
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 12 Jan 2008 12:27:22 +0000
 
