--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-14  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 928t.
+
 2008-01-12  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Updated to 928f.
