Russian translation for scripts. Closes: #460709

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,9 @@ dpkg (1.14.16) UNRELEASED; urgency=low
     Galician unfuzzied.
   * Russian (Yuri Kozlov). Closes: #460708
 
+  [ Updated scripts translations ]
+  * Russian (Yuri Kozlov). Closes: #460708
+
  -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 12 Jan 2008 12:27:22 +0000
 
 dpkg (1.14.15) unstable; urgency=low
