--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-14  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 483t.
+
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
