Fix spelling error

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -1588,7 +1588,7 @@ msgstr "pas d'informations de dépendance trouvées pour %s (utilisé par %s)."
 #: scripts/dpkg-shlibdeps.pl:244
 #, perl-format
 msgid "symbol %s used by %s found in none of the libraries."
-msgstr "symbole %s utilisé par %s trouvé dans aucun des bibliothèques."
+msgstr "symbole %s utilisé par %s trouvé dans aucune des bibliothèques."
 
 #: scripts/dpkg-shlibdeps.pl:257
 #, perl-format
