--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-14  Cyril Brulebois  <cyril.brulebois@enst-bretagne.fr>
+
+	* fr.po: Fix spelling error.
+
 2008-01-14  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 483t.
