Use the perl POSIX module instead of the enoent helper binary

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-01-16  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-divert.pl: Use :errno_h from POSIX.
+	($enoent): Remove variable.
+	(ENOENT): Remove function.
+	* scripts/update-alternatives.pl: Likewise.
+	* utils/Makefile.am (pkglib_PROGRAMS): Remove variable.
+	(enoent_SOURCES): Likewise.
+	* utils/enoent.c: Remove file.
+
+2008-01-16  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/build.c (do_build): Use NULL instead of 0.
 	* dpkg-deb/extract.c (extracthalf, do_fsystarfile): Likewise.
 	* dpkg-deb/info.c (info_prepare, info_spew): Likewise.
