dpkg-shlibdeps: handle the case where the same binary is listed multiple times
* scripts/dpkg-shlibdeps.pl: When the same binary is passed
several times as parameters (associated to different fields),
associate it to the most important field.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 	duplicated dependencies in fields of lesser priority. Dependencies
 	coming from shlibs files have no associated version and this case
 	wasn't handled properly.
+	* scripts/dpkg-shlibdeps.pl: When the same binary is passed
+	several times as parameters (associated to different fields),
+	associate it to the most important field.
 
 2008-01-14  Raphael Hertzog  <hertzog@debian.org>
 
