--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-16  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c: Fix indentation.
+
+2008-01-16  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-divert.pl: Use :errno_h from POSIX.
 	($enoent): Remove variable.
 	(ENOENT): Remove function.
