s-s-d: Make --quiet silence --test
Closes: #367998

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-16  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (do_stop): Do not print messages when
+	running on quiet and test modes.
+	(run_stop_schedule): Likewise.
+	(main): Likewise.
+
+2008-01-16  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (do_pidfile): Cache pid value over
 	multiple calls.
 
