--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Keep checking for the process when start-stop-daemon is called with
     --retry even if the daemon removed the pidfile. Closes: #460903
     Thanks to Justin Pryzby for the analysis.
+  * Make --quiet silence --test in start-stop-daemon. Closes: #367998
 
   [ Frank Lichtenheld ]
   * Make the -L option of dpkg-parsechangelog actually work (it's
