--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add build-essential as an implicit Build-Depends in dpkg-checkbuilddeps.
     Closes: #402901
+  * Add build-essential to dpkg-dev Recommends.
   * Do not warn about unrecognized Homepage field in binary package stanzas
     in dpkg-genchanges and dpkg-source. Closes: #460309
   * Do not use the enoent helper binary, and use perl POSIX module instead.
