Updated Swedish scripts translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Russian (Yuri Kozlov). Closes: #460708
+  * Swedish (Peter Karlsson).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Sat, 12 Jan 2008 12:27:22 +0000
 
