--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-04  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 483t.
+
 2008-01-14  Cyril Brulebois  <cyril.brulebois@enst-bretagne.fr>
 
 	* fr.po: Fix spelling error.
