--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-01-07 11:58+0200\n"
-"PO-Revision-Date: 2008-01-04 10:59+0100\n"
+"PO-Revision-Date: 2008-01-16 15:04+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n!=1;\n"
+"Plural-Forms: nplurals=2; plural=n!=1;"
 
 #: scripts/822-date.pl:12
 msgid "Usage: 822-date"
@@ -2909,9 +2909,9 @@ msgid "Can't execute objdump: %s"
 msgstr "kunde inte exekvera objdump: %s"
 
 #: scripts/Dpkg/Shlibs/Objdump.pm:190
-#, fuzzy, perl-format
+#, perl-format
 msgid "Couldn't parse dynamic relocation record: %s"
-msgstr "Kunde inte tolka definition av dynamisk symbol: %s"
+msgstr "Kunde inte tolka dynamisk relokeringspost: %s"
 
 #: scripts/Dpkg/Shlibs/Objdump.pm:300
 #, perl-format
@@ -2977,3 +2977,4 @@ msgstr "%s dog av signal %s"
 #, perl-format
 msgid "%s failed with unknown exit code %d"
 msgstr "%s misslyckades med okänd felkod %d"
+
