--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-17  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (do_help): Move version printing to ...
+	(do_version): ... here. New function.
+	(main): Call do_version instead of printf.
+
 2008-01-17  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Reinstate support of the ${Format}
