--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-17  Guillem Jover  <guillem@debian.org>
 
+	* THANKS: Convert to UTF-8.
+
+2008-01-17  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (do_help): Move version printing to ...
 	(do_version): ... here. New function.
 	(main): Call do_version instead of printf.
