--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-17  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Reinstate support of the ${Format}
+	substvars.
+
 2008-01-17  Samuel Thibault  <samuel.thibault@ens-lyon.org>,
             Guillem Jover  <guillem@debian.org>
 
