--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-17  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-source.1: Fix default value of -T parameter.
+
 2008-01-13  Frank Lichtenheld  <djpig@debian.org>
 
 	* dpkg-parsechangelog.1: Document the new
