--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-18  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (do_help): Add missing semicolon.
+
 2008-01-17  Guillem Jover  <guillem@debian.org>
 
 	* THANKS: Convert to UTF-8.
