u-a: Remove unimplemented --test option
Closes: #392432, #461247

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Check current uid and gid in start-stop-daemon before calling setuid,
     setgid and initgroups. Closes: #222524
     Based on a patch by Samuel Thibault.
+  * Remove unimplemented --test option from update-alternatives.
+    Closes: #392432, #461247
 
   [ Frank Lichtenheld ]
   * Make the -L option of dpkg-parsechangelog actually work (it's
