--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-01-18  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl: Stop parsing '--test' as a valid
+	option.
+	($testmode): Remove variable.
+	(usage): Remove '--test' option help.
+	* man/update-alternatives.8: Remove '--test' documentation.
+
+2008-01-18  Guillem Jover  <guillem@debian.org>
+
 	* utils/start-stop-daemon.c (do_help): Add missing semicolon.
 
 2008-01-17  Guillem Jover  <guillem@debian.org>
