configure.ac: Add missing quotes to AC_CHECK_SIZEOF calls

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-18  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac (AC_CHECK_SIZEOF): Quote parameters.
+
+2008-01-18  Guillem Jover  <guillem@debian.org>
+
 	* THANKS: Add all the people that have contributed until now.
 
 2008-01-18  Guillem Jover  <guillem@debian.org>
