s-s-d: Clarify in help output that --name is one of the required options
Closes: #354999

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Additionally check if errno is EEXIST after rmdir(2), as SUSv3 specifies
     that on non-empty directories it can either return that or ENOTEMPTY.
     This fixes run time problems on Solaris.
+  * Fix start-stop-daemon --help output to state that --name is one of the
+    possible required options to use. Closes: #354999
 
   [ Frank Lichtenheld ]
   * Make the -L option of dpkg-parsechangelog actually work (it's
